Fixed contrast errors. Updated .txt.

--- a/lesson2/styles/l2-small.css
+++ b/lesson2/styles/l2-small.css
@@ -54,7 +54,7 @@ p {
 }
 
 a {
-    color: #C44900;
+    color: #FFB185;
 }
 
 #card-container {
